--- a/app/globals.css
+++ b/app/globals.css
@@ -35,7 +35,6 @@
     --radius: 0.5rem;
   }
 }
-
 @layer base {
   * {
     @apply border-border;
@@ -44,7 +43,9 @@
     @apply bg-background text-foreground;
     background-image: url('/bg.png');
     background-size: cover;
-    background-color: rgba(255, 255, 255, 0.7); /* 背景色を白の半透明に設定 */
-    background-blend-mode: lighten; /* 画像と背景色を合成するモードを設定 */
+    background-color: rgba(255, 255, 255, 0.7); /* Semi-transparent background color */
+  }
+  .content {
+    @apply bg-white bg-opacity-70; /* Content with some transparency */
   }
 }
